2008-10-21  Eric B. Weddington  <eric.weddington@atmel.com>

	* xml/avrgcc-header: Change all temporary filenames to be unique to
	allow script to be run in parallel. Move output of blank line in log
	file.

2008-10-19  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox128a1.h: Update header file from XML source.
	* include/avr/iox64a1.h: Same.
	* include/avr/iox64a3.h: New header file for new device.
	* include/avr/iox128a3.h: Same.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox256a3b.h: Same.
	* include/avr/iox256a3v.h: Same.

2008-10-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #22540.
	* include/avr/io90pwm316.h: Add signature information.
	* include/avr/io90pwm216.h: Same. 
	* include/avr/io90pwm3b.h: Same.
	* include/avr/io90pwm2b.h: Same.
	* include/avr/iom1281.h: Same.
	* include/avr/iom32.h: Same.
	* include/avr/iom32c1.h: Same.
	* include/avr/iom32m1.h: Same.
	* include/avr/iom48p.h: Same.
	* include/avr/iom64.h: Same.
	* include/avr/iom88.h: Same.
	* include/avr/iom88p.h: Same.
	* include/avr/iom128.h: Same.
	* include/avr/iom161.h: Same.
	* include/avr/iom162.h: Same.
	* include/avr/iom163.h: Same.
	* include/avr/iom165.h: Same.
	* include/avr/iom165p.h: Same.
	* include/avr/iom168.h: Same.
	* include/avr/iom168p.h: Same.
	* include/avr/iom169.h: Same.
	* include/avr/iom169p.h: Same.
	* include/avr/iom323.h: Same.
	* include/avr/iom325.h: Same.
	* include/avr/iom328p.h: Same.
	* include/avr/iom329.h: Same.
	* include/avr/iom406.h: Same.
	* include/avr/iom640.h: Same.
	* include/avr/iom644.h: Same.
	* include/avr/iom645.h: Same.
	* include/avr/iom649.h: Same.
	* include/avr/iom1280.h: Same.
	* include/avr/iom1284p.h: Same.
	* include/avr/iom2560.h: Same.
	* include/avr/iom2561.h: Same.
	* include/avr/iom3250.h: Same.
	* include/avr/iom3290.h: Same.
	* include/avr/iom6450.h: Same.
	* include/avr/iom6490.h: Same.
	* include/avr/iom8515.h: Same.
	* include/avr/iom8535.h: Same.
	* include/avr/iocan32.h: Same.